<resources>
    <string name="app_name">FT Hangouts</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FT Hangouts</string>
    <string name="nav_header_subtitle">Messaging &amp; Contacts</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_messages">Messages</string>
    
    <!-- Contact strings -->
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="save_contact">Save Contact</string>
    <string name="update_contact">Update Contact</string>
    <string name="contact_added">Contact added successfully</string>
    <string name="contact_updated">Contact updated successfully</string>
    <string name="contact_deleted">Contact deleted</string>
    <string name="confirm_delete">Are you sure you want to delete this contact?</string>
    <string name="name_required">Name is required</string>
    <string name="invalid_phone">Invalid phone number format</string>
    <string name="invalid_email">Invalid email format</string>
    <string name="no_contacts">No contacts found. Add a new contact.</string>
    
    <!-- Form field hints -->
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="email_hint">Email</string>
    <string name="address_hint">Address</string>
    <string name="notes_hint">Notes</string>
    <string name="change_photo">Change photo</string>
    <string name="fill_details_new_contact">Fill in the details below to create a new contact</string>
    
    <!-- Message related strings -->
    <string name="send_message_desc">Send message</string>
    <string name="type_message_hint">Type a message</string>
    <string name="sms_permission_required">SMS permission required to send messages</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="message_sent">Message sent</string>
    <string name="message_not_sent">Message not sent</string>
    <string name="new_message">New Message</string>
    <string name="no_conversations">No conversations yet</string>
    <string name="select_contact">Select a contact to message</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="message_contact">Message</string>
</resources>